Add the devedition endpoint.
