# pollbot/api.yaml
@@ -248,6 +248,26 @@ paths:
       tags:
       - Status
 
+  /{product}/{version}/product-details/devedition-beta-versions-matches:
+    get:
+      summary: "checks that the devedition version matches the beta version"
+      description: >
+        checks https://product-details.mozilla.org/1.0/firefox_version.json to see
+        if the devedition version matches the beta version
+      operationId: "checkProductDetailsDeveditionAndBetaVersionsMatches"
+      produces:
+      - "application/json"
+      parameters:
+      - $ref: "#/parameters/product"
+      - $ref: "#/parameters/version"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/existanceStatus"
+      tags:
+      - Status
+
   /{product}/{version}/bedrock/security-advisories:
     get:
       summary: "check security advisories have been published on mozilla.org"
